--- a/whoim.html
+++ b/whoim.html
@@ -49,7 +49,7 @@
             <div class="bg-cover flex flex-auto min-h-screen " style="background-image: url('Images/background-full-02-01.jpg');">
                 <div class="box-content rounded-full font-bold bg-[#1F1F1F] shadow-lg shadow-neutral-500/50 hover:shadow-blue-500/100 hover:duration-700 h-1/2 w-1/2 border-8 py-40 px-32 ml-48 mt-16 border-y-pink-500 flex space-x-4 overflow-hidden">
                     <div class="h-44 w-44 border-2 border-[#4c74b9]  rounded-lg flex justify-center pt-5 pr-2">
-                        <img class="relative h-32 w-32" src="logo.png">
+                        <img class="relative h-32 w-32" src="Images/logo.png">
                         
                 </div>
 
