--- a/whoim.html
+++ b/whoim.html
@@ -13,7 +13,7 @@
         <nav class="bg-gray-500 border-gray-200 dark:bg-gray-900">
             <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
               <a href="index.html" class="flex items-center space-x-3 rtl:space-x-reverse">
-                  <img src="logo.png" class="h-8" alt="Mano Tech" />
+                  <img src="Images/logo.png" class="h-8" alt="Mano Tech" />
                   <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white first-letter:bg-gray-500">Mano Tech</span>
               </a>
                 <!-- idk -->
